shady-KISS-skin History
-------------------------------------------

2016-03-26:
- Some more stuff for plex II

2016-03-19:
- Added thumbs for extras in plug-plex-detail

2016-03-18:
- Some more stuff for plex

2016-03-16:
- Small fixes in plug-plex-root

2016-03-13:
- Fixed progressbarcolour in plex-detail-view
- Added setup for banner and poster in displaychannel, switched from shifting to fading


2016-03-12:
- First steps with plug-plex-detail

2016-03-11:
- Added banner in displaychannel 

2016-03-09:
- Added timerconflicts in displaymenudefault 

2016-03-07:
- Removed scalingtv* in all views but main- and setupmenu
- Removed Debug in displaymenudefault
- Reactivated blinking of recording-marker in displaychannel

2016-02-06:
- Fixed bug in translations of setup.xml

2016-02-03:
- Added optional devices-widget for mainmenu

2016-02-02:
- Adjusted width of systeminfo-progressbar
- Added setup for second column in settings and edit
- Fixed typo, removed blinking of recording-marker in displaychannel
- Fixed missed end of Start Tag drawimage

2016-02-01:
- Added setup for channellist without running events
- Added setup for statuscolumn in zaphistory-plugin
- Adjusted width of zaphistory-progressbar


2016-02-29:
- Fixed background of separator in displaymenuschedules
- Added presenteventtitle to listitems in displaymenuchannel without currentelement
- Added special display for timeredit, recordingedit and zaphistory-plugin in displaymenudefault
- Some tweaks for zaphistory

2016-02-27:
- Added presenteventtitle to listitems in displaymenuchannel

2016-02-23:
- Some cosmestics in tvguideng-recmenu

2016-02-22:
- Small fixes 
- Fixed int-selector in tvguideng-recmenu
- Improved display of progressbars in displaymenudefault
- Reimplemented support for plexplugin

2016-02-19:
- Adjusted y-values in displayreplay, reverted last commit
- Removed debug in displayreplay

2016-02-18:
- Changed scrapercontent in displayreplay from shifting to fading

2016-02-17: