@@ -3,6 +3,7 @@ shady-KISS-skin History
 
 2016-03-26:
 - Some more stuff for plex II
+- Added setup-submenu für pluginspecific settings
 
 2016-03-19:
 - Added thumbs for extras in plug-plex-detail
